Adjusted Reloads, Changed Checks

--- a/config.yml
+++ b/config.yml
@@ -3,16 +3,39 @@ mysql: true
 mysql-database: 'jdbc:mysql://localhost:3306/minecraft'
 mysql-user: 'root'
 mysql-password: 'root'
-#Change these if you want to load a database#
+#Change these if you want to load a different database#
 #First load will create these databases#
 mysql-table: banlist
 mysql-table-ip: banlistip
-#Disable this if you do not want to use the -s#
-#to silence broadcastss#
 auto-complete: true
-#Ultraban requires Vault for the Command /fines#
-#Disable this is you don't not want to use /fines#
+#Ultraban requires Vault for the Command /fine#
+#Disable this if you don't not want to use fines#
 #Or would rather not use the Vault Library#
 useFine: true
 #Bukkit depreciated the standard config#
-#Custom commands and messages are soone to come#
+#Custom commands and messages are soon to come#
+messages:
+  banMsgFailed: '&8Player &1%victim% &8is already banned!'
+  unbanMsg: '&8Successfully unbanned player &1%victim%&8!'
+  unbanMsgGlobal: '&1%victim% &8was unbanned by &7%player%&8!'
+  unbanMsgFailed: '&8Failed to unban &1%victim%&8!'
+  kickAllMsg: '%player% kicked everyone. Reason: %reason%'
+  kickMsgVictim: 'You have been kicked by %player%. Reason: %reason%'
+  kickMsgBroadcast: '&1%victim% &8was kicked by &7%player%&8. Reason: &7%reason%'
+  kickMsgFailed: '&8Kick failed: &8%victim% &8isn''t online.'
+  banMsgVictim: 'You have been banned by %player%. Reason: %reason%'
+  banMsgBroadcast: '&1%victim% &8was banned by &7%player%&8. Reason: &7%reason%'
+  tempbanMsgVictim: 'You have been temp. banned by %player%. Reason: %reason%'
+  tempbanMsgBroadcast: '&1%victim% &8was temp. banned by &7%player%&8. Reason: &7%reason%'
+  LoginTempban: '&8You are banned until &4%time%&8! Reason: &7%reason%'
+  LoginBan: '&8You are banned from this server! Reason: &7%reason%'
+  LoginIPBan: '&8This IP is banned!'
+  fineMsgVictim: You have been fined by %player% in the amount of %amt%
+  fineMsgBroadcast: '&1%victim% &8was fined by &7%player%&8 in the amount of &7%amt%'
+#Do Not Change Values Below#
+jail:
+  x: 0
+  y: 0
+  z: 0
+  yaw: 0
+  pitch: 0
