--- a/config.yml
+++ b/config.yml
@@ -24,6 +24,7 @@ useForceRespawn: true
 useEmpty: true
 usePermaban: true
 useWarn: true
+useRules: true
 #change to true or false to enable lockdown#
 #also can be done ingame /lockdown#
 lockdown: false
@@ -45,7 +46,7 @@ messages:
   tempbanMsgBroadcast: '&c%victim% &8was temp. banned by &9%admin%&8. Reason: &c%reason%!'
   LoginTempban: '&8You are banned until &c%time%&8! Reason: &c%reason%!'
   LoginBan: '&8You are banned from this server! Reason: &c%reason%!'
-  LoginIPBan: '&8This IP is banned!'
+  LoginIPBan: 'Your IP is banned!'
   fineMsgVictim: 'You have been fined by %admin% in the amount of %amt%!'
   fineMsgBroadcast: '&c%victim% &8was fined by &9%admin%&8 in the amount of &c%amt%!'
   emptyMsgVictim: '&9%admin% has cleared your inventory!'
@@ -59,6 +60,19 @@ messages:
   jailMsgBroadcast: '&c%victim% &8was jailed by &9%admin%&8. Reason: &c%reason%!'
   warnMsgVictim: '&8You have been warned by &9%admin%&8. Reason: &c%reason%!'
   warnMsgBroadcast: '&c%victim% &8was warned by &9%admin%&8. Reason: &c%reason%!'
+  lockMsgLogin: 'Server is under a lockdown, Try again later! Sorry.'
+#Adjust as you see fit or set ingame.#
+rules:
+  one:
+  two:
+  three:
+  four:
+  five:
+  six:
+  seven:
+  eight:
+  nine:
+  ten:
 #Do Not Change Values Below#
 jail:
   x: 0
