--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/jmccurry/Minecraft/Vault.jar"/>
 	<classpathentry kind="lib" path="D:/Documents/Downloads/Reconstruct/PermissionsEx-1.14-package/Permissions.jar"/>
 	<classpathentry kind="lib" path="D:/Documents/Downloads/Reconstruct/PermissionsEx-1.14-package/PermissionsEx.jar"/>
 	<classpathentry kind="lib" path="D:/Documents/Downloads/craftbukkit-1.0.0-SNAPSHOT.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Vault"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
