--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="D:/Documents/Downloads/Reconstruct/PermissionsEx-1.14-package/PermissionsEx.jar"/>
 	<classpathentry kind="lib" path="D:/Documents/Downloads/craftbukkit-1.0.0-SNAPSHOT.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Vault"/>
+	<classpathentry kind="lib" path="D:/Documents/Downloads/Vault.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
