--- a/config.yml
+++ b/config.yml
@@ -61,6 +61,14 @@ messages:
   warnMsgVictim: '&8You have been warned by &9%admin%&8. Reason: &c%reason%!'
   warnMsgBroadcast: '&c%victim% &8was warned by &9%admin%&8. Reason: &c%reason%!'
   lockMsgLogin: 'Server is under a lockdown, Try again later! Sorry.'
+  jailCmdMsg: 'You cannot use commands while jailed!'
+  jailChatMsg: 'Your cry falls on deaf ears.'
+  jailPlaceMsg: 'You cannot place blocks while you are jailed!'
+  jailBreakMsg: 'You cannot break blocks while you are jailed!'
+  muteChatMsg: 'You have been muted!'
+  unmuteMsgVictim: 'You have been unmuted.'
+  unmuteMsg: 'You have unmuted %victim%.'
+  
   ruleMsg: '&9The Servers Rules Are As Follows!'
 #Adjust as you see fit or set ingame.#
 rules:
