--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ useRules: true
 #change to true or false to enable lockdown#
 #also can be done ingame /lockdown#
 lockdown: false
-
+dupePolicy: false
 messages:
   banMsgFailed: '&c%victim% &8is already banned!'
   unbanMsg: '&8Successfully unbanned &c%victim%&8!'
@@ -61,6 +61,7 @@ messages:
   warnMsgVictim: '&8You have been warned by &9%admin%&8. Reason: &c%reason%!'
   warnMsgBroadcast: '&c%victim% &8was warned by &9%admin%&8. Reason: &c%reason%!'
   lockMsgLogin: 'Server is under a lockdown, Try again later! Sorry.'
+  DupeIPKick: 'Duplicate IP addresses disabled.'
   jailCmdMsg: 'You cannot use commands while jailed!'
   jailChatMsg: 'Your cry falls on deaf ears.'
   jailPlaceMsg: 'You cannot place blocks while you are jailed!'
