Found some issues with Muting Cleared it up. Easy!

--- a/plugin.yml
+++ b/plugin.yml
@@ -62,7 +62,8 @@ commands:
     usage: /<command> <set/pardon/player> player - pardon player
   umute:
     description: Mute player
-    usage: /<command> <unmute/player> player - mutes player
+    usage: /<command> <player> player - mutes / unmutes player
+    aliases: [mute,unmute,uumute,ununmute,uunmute]
   lockdown:
     description: Lockdown the Server
     usage: /<command> <on/off/status>
