--- a/config.yml
+++ b/config.yml
@@ -15,6 +15,7 @@ auto-complete: true
 #Command Checks#
 useFine: true
 #Max allowable fine#
+#If Zero then no max will be placed#
 maxFineAmt: 0
 useJail: true
 useLockdown: true
@@ -30,6 +31,7 @@ defReason: 'not sure'
 #change to true or false to enable lockdown#
 #also can be done ingame /lockdown#
 lockdown: false
+#Enabling dupePolicy will disallow duplicate IP connections#
 dupePolicy: false
 messages:
   banMsgFailed: '&c%victim% &8is already banned!'
