--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="lib" path="C:/Users/jmccurry/Minecraft/Vault.jar"/>
 	<classpathentry kind="lib" path="D:/Documents/Downloads/Reconstruct/PermissionsEx-1.14-package/Permissions.jar"/>
 	<classpathentry kind="lib" path="D:/Documents/Downloads/Reconstruct/PermissionsEx-1.14-package/PermissionsEx.jar"/>
-	<classpathentry kind="lib" path="D:/Documents/Downloads/craftbukkit-1.2.3-R0.2-20120305.203110-3.jar"/>
+	<classpathentry kind="lib" path="D:/Documents/Downloads/craftbukkit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
