--- a/config.yml
+++ b/config.yml
@@ -40,36 +40,36 @@ lockdown: false
 #Enabling dupePolicy will disallow duplicate IP connections#
 dupePolicy: false
 messages:
-  banMsgFailed: '&c%victim% &8is already banned!'
-  unbanMsg: '&8Successfully unbanned &c%victim%&8!'
-  unbanMsgBroadcast: '&c%victim% &8was unbanned by &9%admin%&8!'
-  unbanMsgFailed: '&c%victim% &8is already unbanned!'
+  banMsgFailed: '&4%victim% &7is already banned!'
+  unbanMsg: '&7Successfully unbanned &4%victim%&7!'
+  unbanMsgBroadcast: '&4%victim% &7was unbanned by &3%admin%&7!'
+  unbanMsgFailed: '&4%victim% &7is already unbanned!'
   kickAllMsg: '%admin% kicked everyone. Reason: %reason%!'
   kickMsgVictim: 'You have been kicked by %admin%. Reason: %reason%!'
-  kickMsgBroadcast: '&c%victim% &8was kicked by &9%admin%&8. Reason: &c%reason%!'
-  kickMsgFailed: '&8Kick failed: &8%victim% &8isn''t online.'
+  kickMsgBroadcast: '&4%victim% &7was kicked by &3%admin%&7. Reason: &4%reason%!'
+  kickMsgFailed: '&7Kick failed: &7%victim% &7isn''t online.'
   banMsgVictim: 'You have been banned by %admin%. Reason: %reason%!'
-  banMsgBroadcast: '&c%victim% &8was banned by &9%admin%&8. Reason: &c%reason%!'
+  banMsgBroadcast: '&4%victim% &7was banned by &3%admin%&7. Reason: &4%reason%!'
   permbanMsgVictim: 'You have been permabanned by %admin%. Reason: %reason%!'
-  permbanMsgBroadcast: '&c%victim% &8has been permabanned by &9%admin%&8. Reason: &c%reason%!'
+  permbanMsgBroadcast: '&4%victim% &7has been permabanned by &3%admin%&7. Reason: &4%reason%!'
   tempbanMsgVictim: 'You have been temp. banned by %admin%. Reason: %reason%!'
-  tempbanMsgBroadcast: '&c%victim% &8was temp. banned by &9%admin%&8. Reason: &c%reason%!'
-  LoginTempban: '&8You are banned until &c%time%&8! Reason: &c%reason%!'
-  LoginBan: '&8You are banned from this server! Reason: &c%reason%!'
+  tempbanMsgBroadcast: '&4%victim% &7was temp. banned by &3%admin%&7. Reason: &4%reason%!'
+  LoginTempban: '&7You are banned until &4%time%&7! Reason: &4%reason%!'
+  LoginBan: '&7You are banned from this server! Reason: &4%reason%!'
   LoginIPBan: 'Your IP is banned!'
   fineMsgVictim: 'You have been fined by %admin% in the amount of %amt%!'
-  fineMsgBroadcast: '&c%victim% &8was fined by &9%admin%&8 in the amount of &c%amt%!'
-  emptyMsgVictim: '&9%admin% has cleared your inventory!'
-  emptyMsgBroadcast: '&9%admin% has cleared the inventory of &c%victim%!'
-  starveMsgVictim: '&8You are now starving!'
-  starveMsgBroadcast: '&c%victim% is now starving!'
-  fspawnMsgVictim: '&8You have been sent to spawn!'
-  fspawnMsgBroadcast: '&c%victim% &8is now at spawn!'
-  jailMsgVictim: '&8You have been jailed by &9%admin%&8. Reason: &c%reason%!'
-  jailMsgRelease: '&c%victim% &8was released from jail by &9%admin%&8!'
-  jailMsgBroadcast: '&c%victim% &8was jailed by &9%admin%&8. Reason: &c%reason%!'
-  warnMsgVictim: '&8You have been warned by &9%admin%&8. Reason: &c%reason%!'
-  warnMsgBroadcast: '&c%victim% &8was warned by &9%admin%&8. Reason: &c%reason%!'
+  fineMsgBroadcast: '&4%victim% &7was fined by &3%admin%&7 in the amount of &4%amt%!'
+  emptyMsgVictim: '&3%admin% has cleared your inventory!'
+  emptyMsgBroadcast: '&3%admin% has cleared the inventory of &4%victim%!'
+  starveMsgVictim: '&7You are now starving!'
+  starveMsgBroadcast: '&4%victim% is now starving!'
+  fspawnMsgVictim: '&7You have been sent to spawn!'
+  fspawnMsgBroadcast: '&4%victim% &7is now at spawn!'
+  jailMsgVictim: '&7You have been jailed by &3%admin%&7. Reason: &4%reason%!'
+  jailMsgRelease: '&4%victim% &7was released from jail by &3%admin%&7!'
+  jailMsgBroadcast: '&4%victim% &7was jailed by &3%admin%&7. Reason: &4%reason%!'
+  warnMsgVictim: '&7You have been warned by &3%admin%&7. Reason: &4%reason%!'
+  warnMsgBroadcast: '&4%victim% &7was warned by &3%admin%&7. Reason: &4%reason%!'
   lockMsgLogin: 'Server is under a lockdown, Try again later! Sorry.'
   DupeIPKick: 'Duplicate IP addresses disabled.'
   jailCmdMsg: 'You cannot use commands while jailed!'
@@ -77,7 +77,7 @@ messages:
   jailPlaceMsg: 'You cannot place blocks while you are jailed!'
   jailBreakMsg: 'You cannot break blocks while you are jailed!'
   tempjailMsgVictim: 'You have been temp. jailed by %admin%. Reason: %reason%!'
-  tempjailMsgBroadcast: '&c%victim% &8was temp. jailed by &9%admin%&8. Reason: &c%reason%!'
+  tempjailMsgBroadcast: '&4%victim% &7was temp. jailed by &3%admin%&7. Reason: &4%reason%!'
   muteChatMsg: 'You have been muted!'
   unmuteMsgVictim: 'You have been unmuted.'
   unmuteMsg: 'You have unmuted %victim%.'
