--- a/plugin.yml
+++ b/plugin.yml
@@ -63,10 +63,10 @@ commands:
   starve:
     description: Removes food from player
     usage: /<command> player - Removes food from player
-  ujail:
+  jail:
     description: Jail player
     usage: /<command> <set/pardon/player> player - pardon player
-  utempjail:
+  tempjail:
     description: Temporary Jail Player
     usage: /<command> player time timeform [reason]
   umute:
