Reimport Changes. Fixed issue with unban case sensitivity

--- a/config.yml
+++ b/config.yml
@@ -39,6 +39,14 @@ defReason: 'not sure'
 lockdown: false
 #Enabling dupePolicy will disallow duplicate IP connections#
 dupePolicy: false
+#Traceback Proxy Check is to test Player Ip's on Connection#
+#Timeout is measured in ms#
+TraceBackProxyCheck: false
+tracetimeout: 600
+LoginDupeIpCheck: false
+
+
+#Messages#
 messages:
   banMsgFailed: '&4%victim% &7is already banned!'
   unbanMsg: '&7Successfully unbanned &4%victim%&7!'
